# Embedding_PFA_Case

./: .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yaml
dockerfiles/: api.dockerfile
src/embedding_pfa_case/: api.py  app.py  logging.py  model.py
tests/API/: test_api.py
tests/Model/: test_model.py
